2010-11-10  Andy Buckley  <andy@insectnation.org>

	* Adding a JetAlg::useInvisibles(bool) mechanism to allow ATLAS
	jet studies to include neutrinos. Anyone who chooses to use this
	mechanism had better be careful to remove hard neutrinos manually
	in the provided FinalState object.

2010-11-09  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Adding ATLAS-CONF-2010-049 conference note. Data is read from plots.
	Fragmentation functions look good, but I can't reproduce the MC lines
	(or even the relative differences between them) in the jet cross-section
	plots. So consider those unvalidated for now. Oh, and it seems ATLAS
	screwed up the error bands in their ratio plots, too. They are
	upside-down.

2010-11-07  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Adding ATLAS-CONF-2010-081 conference note. Data is read from plots.

2010-11-06  Andy Buckley  <andy@insectnation.org>

	* Deprecating the old JetShape projection and renaming to
	ClosestJetShape: the algorithm has a tenuous relationship with
	that actually used in the CDF (and ATLAS) jet shape analyses. CDF
	analyses to be migrated to the new JetShape projection... and some
	of that projection's features, design elements, etc. to be
	finished off: we may as well take this opportunity to clear up
	what was one of our nastiest pieces of code.

2010-11-05  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Adding ATLAS-CONF-2010-031 conference note. Data is read from plots.

2010-10-29  Andy Buckley  <andy@insectnation.org>

	* Making rivet-buildplugin use the same C++ compiler and CXXFLAGS
	variable as used for the Rivet system build.

	* Fixing NeutralFinalState projection to, erm, actually select
	neutral particles (by Hendrik).

	* Allow passing a general FinalState reference to the JetShape
	projection, rather than requiring a VetoedFS.

2010-10-07  Andy Buckley  <andy@insectnation.org>

	* Adding a --with-root flag to rivet-buildplugin to add
	root-config --libs flags to the plugin build command.
