@@ -1,0 +1,21 @@
+Name: ATLAS_2010_CONF_2010_083
+Year: 2010
+Summary: Dijet azimuthal decorrelation at 7000 GeV in ATLAS
+Experiment: ATLAS
+Collider: LHC 7000GeV
+SpiresID: None
+Status: UNVALIDATED -- but PRELIMINARY DATA!
+Authors:
+ - Hendrik Hoeth <hendrik.hoeth@cern.ch>
+References:
+ - ATLAS-CONF-2010-083
+RunInfo:
+  pp QCD interactions at 7000 GeV including diffractive events.
+NumEvents: 1000000
+Beams: [p+, p+]
+Energies: [7000]
+PtCuts: [0]
+Description:
+  Dijet azimuthal decorrelation measured by ATLAS at 7 TeV. Jets are anti-kt with
+  $R=0.6$, $p_\perp>100$ GeV, $|\eta|<0.8$. The analysis is binned in four leading
+  jet $p_\perp$ bins. All data is fully corrected. ATTENTION - Data read from plots!
