@@ -8,6 +8,7 @@ dist_pkgdata_DATA = \
   ATLAS_2010_CONF_2010_031.info \
   ATLAS_2010_CONF_2010_049.info \
   ATLAS_2010_CONF_2010_081.info \
+  ATLAS_2010_CONF_2010_083.info \
   BELLE_2006_S6265367.info \
   CDF_1988_S1865951.info \
   CDF_1990_S2089246.info \
