@@ -1,0 +1,32 @@
+# BEGIN PLOT /ATLAS_2010_CONF_2010_083/d01-x01-y01
+Title=Jet--jet azimuthal angle, $p_\perp^\text{max} \in [110,160]\text{ GeV}$
+XLabel=$\Delta \phi_\text{dijet}$ / rad
+YLabel=$1/\sigma_\text{dijet} \, \text{d}\sigma_\text{dijet}/\text{d}\Delta\phi_\text{dijet}$
+LegendXPos=0.50
+CustomLegend={\large ATLAS preliminary}
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2010_CONF_2010_083/d02-x01-y01
+Title=Jet--jet azimuthal angle, $p_\perp^\text{max} \in [160,210]\text{ GeV}$
+XLabel=$\Delta \phi_\text{dijet}$ / rad
+YLabel=$1/\sigma_\text{dijet} \, \text{d}\sigma_\text{dijet}/\text{d}\Delta\phi_\text{dijet}$
+LegendXPos=0.50
+CustomLegend={\large ATLAS preliminary}
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2010_CONF_2010_083/d03-x01-y01
+Title=Jet--jet azimuthal angle, $p_\perp^\text{max} \in [210,310]\text{ GeV}$
+XLabel=$\Delta \phi_\text{dijet}$ / rad
+YLabel=$1/\sigma_\text{dijet} \, \text{d}\sigma_\text{dijet}/\text{d}\Delta\phi_\text{dijet}$
+LegendXPos=0.50
+CustomLegend={\large ATLAS preliminary}
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2010_CONF_2010_083/d04-x01-y01
+Title=Jet--jet azimuthal angle, $p_\perp^\text{max} > 310\text{ GeV}$
+XLabel=$\Delta \phi_\text{dijet}$ / rad
+YLabel=$1/\sigma_\text{dijet} \, \text{d}\sigma_\text{dijet}/\text{d}\Delta\phi_\text{dijet}$
+LegendXPos=0.50
+CustomLegend={\large ATLAS preliminary}
+# END PLOT
+
