@@ -8,6 +8,7 @@ dist_pkgdata_DATA = \
   ATLAS_2010_CONF_2010_031.plot \
   ATLAS_2010_CONF_2010_049.plot \
   ATLAS_2010_CONF_2010_081.plot \
+  ATLAS_2010_CONF_2010_083.plot \
   CDF_1988_S1865951.plot \
   CDF_1990_S2089246.plot \
   CDF_1991_S2313472.plot \
